--- a/res/refs.bib
+++ b/res/refs.bib
@@ -43,6 +43,12 @@ Connection scan accelerated
 Ben Strasser Dorothea Wagner
 https://dl.acm.org/doi/10.5555/2790174.2790186
 
+@misc{ConnectionScanAccelerated,
+    title = {Connection Scan Accelerated},
+    howpublished = {\url{https://dl.acm.org/doi/pdf/10.5555/2790174.2790186}},
+}
+
+
 % ----------------------------
 
 @misc{tudelft,
