--- a/res/rapport.ltx
+++ b/res/rapport.ltx
@@ -62,8 +62,8 @@
 %TODO: mentionner le fait qu'on a considéré que le temps de changement entre deux trips est 0s
 
 %TODO: parler du "limited walking optimization" et que ca a besoin que nos
-%footpaths soient transitivement fermés ce qui en pratique n'est pas du tout le
-%cas
+%footpaths soient transitivement fermés + inégalité triangulaire ce qui en
+%pratique n'est pas du tout le cas (voir https://arxiv.org/pdf/1703.05997 page 4)
 
 \section{Introduction}
 
