--- a/res/rapport.ltx
+++ b/res/rapport.ltx
@@ -76,12 +76,12 @@ où de nombreux citoyens dépendent quotidiennement des bus, trams, métros et
 trains pour se déplacer. Déterminer l’itinéraire le plus rapide entre deux
 arrêts constitue un enjeu crucial. Ce rapport présente deux algorithmes de plus
 court chemin prenant en compte les trajets multimodaux, i.e. pouvant combiner
-différents modes de transport en commun. Celles-ci prennent également en
-compte, des segments de marche à pied entre les arrêts. Les deux algorithmes
-sont regroupés sous le nom de \textit{Connection Scan Algorithm (CSA)} et sont
-présentés dans \cite{ConnectionScanAlgorithmLong:2017}.
-Dans un premier temps, nous expliquons
-les notions générales aux problèmes de plus court chemin dans le contexte des
+différents modes de transport en commun. Ceux-ci prennent également en compte,
+des segments de marche à pied entre les arrêts. Les deux algorithmes sont
+regroupés sous le nom de \textit{Connection Scan Algorithm (CSA)} et sont
+présentés dans \cite{ConnectionScanAlgorithmLong:2017}. Dans un premier temps,
+nous expliquons les notions générales associées aux problèmes de plus court
+chemin dans le contexte des
 transports en commun. % TODO: il faut rajouter une section pour parler de ca
 Dans un deuxième temps, nous détaillons le fonctionnement et notre
 implémentation du CSA de base qui optimise seulement le temps d'arrivée
