--- a/res/refs.bib
+++ b/res/refs.bib
@@ -69,3 +69,15 @@ https://dl.acm.org/doi/10.5555/2790174.2790186
             Bruxelles, voir page~16},
     year = {2021},
 }
+
+% ----------------------------
+
+https://iopscience.iop.org/article/10.1088/1742-6596/1500/1/012104/pdf
+
+@misc{haversineFormula,
+    author = {Rezania Agramanisti Azdy, Febriyanti Darnis},
+    title = {Use of Haversine Formula in Finding Distance Between Temporary
+             Shelter and Waste End Processing Sites},
+    note = {voir page~3},
+    year = {2019},
+}
